Preventing wrapping in code blocks

--- a/site/resources/css/project.less
+++ b/site/resources/css/project.less
@@ -113,6 +113,7 @@
                     font-family: Monaco;
                     font-size: 13px;
                     margin: 0 2px;
+                    white-space: nowrap;
                 }
             }
 
